--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.7",
     "sweetalert2": "^11.4.10",
     "typewriter-effect": "^2.18.2",
     "web-vitals": "^2.1.4"
